fix mixed content (http/https) issue

--- a/people/mduchin/courses/math158/index.html
+++ b/people/mduchin/courses/math158/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML">
+<script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML">
 </script>
 </head>
 
@@ -9,7 +9,7 @@
 <STYLE>
 <!--
 a {text-decoration:none}
-ul {list-style-image:url('http://www.captured.nu/images/bullets_black.png');}
+ul {list-style-image:url('https://www.captured.nu/images/bullets_black.png');}
 //-->
 </STYLE>
 
