--- a/people/mduchin/courses/math211/index.html
+++ b/people/mduchin/courses/math211/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML">
+<script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML">
 </script>
 </head>
 
@@ -9,7 +9,7 @@
 <STYLE>
 <!--
 a {text-decoration:none}
-ul {list-style-image:url('http://www.captured.nu/images/bullets_black.png');}
+ul {list-style-image:url('https://www.captured.nu/images/bullets_black.png');}
 //-->
 
 
@@ -28,7 +28,7 @@ HREF="images/identity.jpeg">
 <tr>
 
 <td><h3>Math 211, Fall 2015</h3>
-<center><img src="http://ecx.images-amazon.com/images/I/51ETjSfxV1L._SX340_BO1,204,203,200_.jpg" width=200></center></td>
+<center><img src="/assets/book_cover.jpg" width=200></center></td>
 
 <td>
  <table cellpadding=5>
